--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -51,15 +51,10 @@ jobs:
       # -------------------------------
       - name: Install GitLeaks
         run: |
-          curl -s https://api.github.com/repos/gitleaks/gitleaks/releases/latest \
-          | grep "browser_download_url.*linux_amd64.tar.gz" \
-          | cut -d '"' -f 4 \
-          | xargs curl -L -o gitleaks.tar.gz
-
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/download/v8.18.2/gitleaks_8.18.2_linux_x64.tar.gz -o gitleaks.tar.gz
           tar -xzf gitleaks.tar.gz
           chmod +x gitleaks
           sudo mv gitleaks /usr/local/bin/gitleaks
-
 
       - name: Run GitLeaks scan
         run: gitleaks detect --source . --no-banner > scans/gitleaks-${{ env.TIMESTAMP }}.txt
